# ManuvrOS

./: .gitignore  DEVLOG.md  Doxyfile  FirmwareDefs.h  Kconfig.projbuild  Makefile  ManuvrConf.h  README.md  component.mk  downloadDeps.sh  main.cpp  mbedTLS_conf.h  raspiMain.cpp
ManuvrOS/: CMakeLists.txt  CommonConstants.h  EnumeratedTypeCodes.cpp  EnumeratedTypeCodes.h  EventManager.cpp  EventManager.h  EventReceiver.cpp  EventReceiver.h  Kernel.cpp  Kernel.h  LogPipe.cpp  LogPipe.h  Makefile  ManuvrEvent.cpp  ManuvrEvent.h  ManuvrOS.h  ManuvrRunnable.cpp  ManuvrRunnable.h  MsgProfiler.h  Rationalizer.h  ScheduleItem.cpp  Scheduler.cpp  Scheduler.h  TaskProfilerData.cpp  Utilities.cpp  Utilities.h  component.mk  mKernel.cpp  mKernel.h
ManuvrOS/CommTransformers/: CommTransformer.h
ManuvrOS/DataStructures/: Argument.cpp  Argument.h  BufferPipe.cpp  BufferPipe.h  ElementPool.h  Gesture.h  InertialMeasurement.cpp  InertialMeasurement.h  LightLinkedList.h  ManuvrOptions.cpp  ManuvrOptions.h  OptsTemplate.h  PriorityQueue.h  Quaternion.cpp  Quaternion.h  RingBuffer.h  SensorFilter.cpp  SensorFilter.h  StopWatch.cpp  StopWatch.h  StringBuilder.cpp  StringBuilder.h  Vector3.h  uuid.cpp  uuid.h
ManuvrOS/Drivers/ADCScanner/: ADCScanner.cpp  ADCScanner.h
ManuvrOS/Drivers/ADG2128/: ADG2128.cpp  ADG2128.h
ManuvrOS/Drivers/ADP8866/: ADP8866.cpp  ADP8866.h
ManuvrOS/Drivers/ATECC508/: ATECC508.cpp  ATECC508.h
ManuvrOS/Drivers/AudioRouter/: AudioRouter.cpp  AudioRouter.h
ManuvrOS/Drivers/BusQueue/: BusQueue.cpp  BusQueue.h
ManuvrOS/Drivers/ChainForge/: ChainForge.h
ManuvrOS/Drivers/DS1807/: DS1807.cpp  DS1807.h
ManuvrOS/Drivers/DS1881/: DS1881.cpp  DS1881.h
ManuvrOS/Drivers/DeviceWithRegisters/: DeviceRegister.cpp  DeviceRegister.h  DeviceWithRegisters.cpp  DeviceWithRegisters.h
ManuvrOS/Drivers/DigitalPots/: DigitalPots.h
ManuvrOS/ManuvrMsg/: Argument.cpp  ManuvrMsg.cpp  ManuvrMsg.h  MessageDefs.h
ManuvrOS/Platform/: CryptOptUnifier.h  Cryptographic.cpp  Cryptographic.h  Identity.cpp  Identity.h  Makefile  ParticlePhoton.cpp  Platform.cpp  Platform.h  PlatformArduino.cpp  PlatformFubarino.cpp  PlatformLinux.cpp  PlatformRaspi.cpp  PlatformTeensy3.cpp  PlatformUnsupported.cpp  PowerManager.h  STM32F4.cpp  STM32F7.cpp  STM32F7.h  Storage.cpp  Storage.h
ManuvrOS/Storage/: Storage.h
ManuvrOS/Transports/: ManuvrXport.cpp  ManuvrXport.h
ManuvrOS/Types/: Image.cpp  Image.h  TypeTranscriber.cpp  TypeTranscriber.h
ManuvrOS/XenoSession/: XenoMessage.cpp  XenoMessage.h  XenoSession.cpp  XenoSession.h
(+327 files in other folders)
